Added some styling to input form

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <body>
     <h1>YouTube To MP3 Converter</h1>
     <div class="container">
-      <form>
-        <label for="fname">URL</label><br />
-        <input type="text" id="fname" name="fname" /><br />
+      <form id="myForm">
+        <input type="text" id="myInput" placeholder="Enter YouTube URL" />
+        <button type="submit">Convert</button>
       </form>
     </div>
+    <script src="/script.js"></script>
   </body>
 </html>
