Added button on hover effects and text effect changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/BebasNeue-Regular.ttf" />
     <link rel="stylesheet" href="/styles/style.css" />
-    <title>Document</title>
+    <title>YT to MP3</title>
   </head>
   <body>
     <h1>YouTube To MP3 Converter</h1>
@@ -15,6 +15,6 @@
         <button type="submit">Convert</button>
       </form>
     </div>
-    <script src="/script.js"></script>
+    <script src="dist/script.js" type="module"></script>
   </body>
 </html>
